html image changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container">
         <header class="navbar">
-            <img src="Memes Hub Logo 2 (1).png" alt="web logo">
+            <img src="Memes Hub Logo.png" alt="web logo">
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Food</a></li>
@@ -19,7 +19,7 @@
             </ul>
         </header>
         <section class="top-home">
-            <img src="Memes Hub Logo 2 (1).png" alt="">
+            <img src="Memes Hub Logo.png" alt="web logo">
         </section>
     </div>
 </body>
