top section modified with some paragraph

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </header>
         <section class="top-home">
             <img src="Memes Hub Logo.png" alt="web logo">
+            <p>Taste Like Never Before</p>
         </section>
     </div>
 </body>
