file path modified

--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
     <meta name="author" content="sai kumar lalam">
     <meta name="theme-color" content="#000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="memes.css">
+    <link rel="stylesheet" href="./css/memes.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Memes Hub</title>
 </head>
 <body>
     <div class="main-container">
         <header class="navbar">
-            <img src="Memes Hub Logo.png" alt="web logo">
             <ul>
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Food</a></li>
                 <li><a href="#">Beverages</a></li>
+                <img src="./images/png/memes hub icon.png" class="header__logo" alt="web logo">
+                <li><a href="#">Menu</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
-        <section class="top-home">
-            <img src="Memes Hub Logo.png" alt="web logo">
-            <p>Taste Like Never Before</p>
+        <section>
+            <div class="top-home"></div>
+            <div class="home__logo">
+                <img src="./images/png/memes hub icon.png" alt="web logo">
+                <p>Taste Like Never Before</p>
+            </div>
         </section>
     </div>
 </body>
