nav bar changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="author" content="sai kumar lalam">
     <meta name="theme-color" content="#000">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta rel="icon" href="images/png/memes hub icon.png">
     <link rel="stylesheet" href="./css/memes.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,25 +15,26 @@
     <title>Memes Hub</title>
 </head>
 <body>
-    <div class="main-container">
-        <header class="navbar">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Food</a></li>
-                <li><a href="#">Beverages</a></li>
-                <img src="./images/png/memes hub icon.png" class="header__logo" alt="web logo">
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </header>
-        <section>
-            <div class="top-home"></div>
-            <div class="home__logo">
-                <img src="./images/png/memes hub icon.png" alt="web logo">
-                <p>Taste Like Never Before</p>
-            </div>
-        </section>
-    </div>
+    <header class="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Food</a></li>
+            <li><a href="#">Beverages</a></li>
+            <li><a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
+    <section>
+        <div class="top-home"></div>
+        <div class="home__logo">
+            <img src="images/png/memes hub icon.png" alt="web logo">
+            <p>Taste Like Never Before</p>
+        </div>
+    </section>
+    <script src="memes.js"></script>
+    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d950.3245578541753!2d83.20054456956022!3d17.68336627669094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3969f9f92763c7%3A0xe00c528d45a10411!2sMemes%20Hub%20Restaurant!5e0!3m2!1sen!2sin!4v1690983117532!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+<P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis alias saepe soluta magnam eum esse quae eveniet, repellat dolorum fugiat inventore et veniam aut autem id eius tenetur sequi, sunt officia similique odit nulla harum? Non, quae cumque? Totam quidem odio magni asperiores, cupiditate sint sit doloribus vel necessitatibus eos ea explicabo iste nemo dicta assumenda aliquam cumque ipsa laboriosam quaerat quam! Eius impedit odit ea autem officia tempore distinctio repudiandae totam ex suscipit consectetur ipsum ratione quod aliquid, mollitia enim dolore nihil iure voluptatum, deleniti omnis quos nobis? Saepe officiis tempora eius obcaecati repudiandae, aspernatur nisi molestiae voluptates aliquam cumque sapiente soluta quaerat cum quam! Sequi asperiores quis alias reprehenderit eligendi, voluptatum doloremque, incidunt officia dignissimos odio, corporis quasi adipisci commodi voluptatem hic! Nam iste a laborum at deleniti facere ipsa laudantium laboriosam quis aspernatur. Rerum quaerat reprehenderit ratione sequi, eligendi modi commodi ad recusandae, animi corporis vero ipsam facere? Itaque aperiam, beatae dolorum at consectetur id temporibus, natus est ad exercitationem dicta excepturi. Excepturi porro recusandae doloremque sit fugit quos placeat repellendus, explicabo tempore nisi voluptas veritatis ut eum nobis quisquam hic pariatur at optio cupiditate aperiam laboriosam quidem? Possimus quibusdam labore ipsum in aperiam adipisci qui sapiente iure laboriosam aspernatur eligendi ad asperiores, aliquid, fuga ex inventore explicabo! Excepturi veritatis molestias quae debitis aut quis nisi, voluptates deserunt. Est quidem, dolores numquam modi, deserunt nam exercitationem fuga dolore doloribus odit pariatur eum reprehenderit ut nobis a ab non beatae facilis perspiciatis, saepe neque perferendis. Mollitia inventore quam ea molestiae hic eligendi asperiores repellendus cumque quod, exercitationem repudiandae harum soluta, ullam cum possimus officiis aut! Esse placeat officia quo alias fuga nemo perferendis repudiandae aspernatur, veritatis quam porro quae nesciunt similique quibusdam adipisci tempora atque veniam voluptate ipsa delectus fugiat inventore? Porro tempore provident, reiciendis beatae soluta sit maxime odio non vel dolores! Minima eligendi sapiente aliquam asperiores nam voluptates hic recusandae consequuntur temporibus, nisi provident, ipsum, explicabo doloremque dolorem labore. Magni nobis voluptas porro, recusandae explicabo nesciunt soluta excepturi placeat eveniet possimus facere quo nulla quasi tempore officia adipisci. Quisquam laudantium est animi earum, sit recusandae qui, commodi ad voluptates, sequi esse reprehenderit deserunt optio nesciunt quos repudiandae officiis quas consequuntur porro nostrum quaerat rem asperiores doloribus. Corporis, est rem? Eos aut officia molestias perspiciatis assumenda illum voluptas, cum ullam consectetur dolores a, vel soluta, delectus cumque ut beatae consequuntur debitis temporibus aliquam voluptate? Optio possimus nisi inventore! Rem, quaerat. Omnis accusamus molestias ullam? Est maxime, sit esse et unde eveniet velit, quae harum ea suscipit dignissimos! Earum at voluptatum quae natus adipisci voluptatibus distinctio. Accusantium unde aliquam, sequi esse doloremque provident beatae necessitatibus magni amet eaque impedit laborum vitae earum iure alias, reprehenderit mollitia sunt atque odio porro eligendi harum sint. Reiciendis optio molestias temporibus architecto ex, neque quasi. Culpa labore, adipisci iusto incidunt qui autem fugit, temporibus recusandae odio optio excepturi voluptatibus. Nesciunt modi corporis earum hic blanditiis odit omnis rem adipisci libero nam magnam facere, aperiam similique dicta est eius. Enim, delectus facere. Earum?</P>
 </body>
 </html>
