about section added

--- a/index.html
+++ b/index.html
@@ -50,24 +50,59 @@
                 </p>
             </div>
             <div class="service__card">
-                <i class="fa-solid fa-people-group fas"></i>
-                <h1 class="primary__heading">Master Chefs</h1>
+                <span>
+                    <i class="fa-solid fa-burger fa-bounce fas"></i>
+                </span>
+                <h1 class="primary__heading">Quality Food</h1>
                 <p class="primary__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Vel ut beatae architecto illum quod distinctio.
                 </p>
             </div>
             <div class="service__card">
-                <i class="fa-solid fa-people-group fas"></i>
-                <h1 class="primary__heading">Master Chefs</h1>
+                <i class="fa-solid fa-truck fas"></i>
+                <h1 class="primary__heading">Online Order</h1>
                 <p class="primary__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Vel ut beatae architecto illum quod distinctio.
                 </p>
             </div>
             <div class="service__card">
-                <i class="fa-solid fa-people-group fas"></i>
-                <h1 class="primary__heading">Master Chefs</h1>
+                <span>
+                    <i class="fa-solid fa-headset fa-shake fas"></i>
+                </span>
+                <h1 class="primary__heading">24/7 Service</h1>
                 <p class="primary__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Vel ut beatae architecto illum quod distinctio.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="sec_pad about__section">
+        <div class="about__section-part">
+            <div class="about__images">
+                <div class="about__image-container">
+                    <img src="images/jpg/restaurant-interior.jpg" alt="about image">
+                </div>
+                <div class="about__image-container">
+                    <img src="images/jpg/close-up-hands-holding-food-plate.jpg" alt="about image">
+                </div>
+                <div class="about__image-container">
+                    <img src="images/jpg/dinner-table-with-foods-soft-drinks-restaurant.jpg" alt="about image">
+                </div>
+                <div class="about__image-container">
+                    <img src="images/jpg/fresh-seafood-grill-plate-perfect-lunch-generated-by-ai.jpg" alt="about image">
+                </div>
+            </div>
+            <div class="about__content">
+                <h1 class="section__heading">about</h1>
+                <h1 class="section__tagline">Welcome to Memes Hub</h1>
+                <p class="primary__paragraph">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium repellendus 
+                    maxime quam nulla natus voluptate, corporis sunt fuga. Ea eveniet tempora rem earum 
+                    ratione cum voluptatibus blanditiis molestias repellendus itaque eos, doloribus 
+                    quaerat sapiente excepturi expedita voluptatum ipsum distinctio voluptate dolores 
+                    perspiciatis dolore, maiores nam quod? Corrupti molestiae vitae ipsam, in aliquam 
+                    officia maxime natus magni nihil nulla quasi beatae.
                 </p>
             </div>
         </div>
