about section modified for mobiles

--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
-    <section>
-        <div class="top-home"></div>
-        <div class="top-home__forground"></div>
+    <section class="home__section">
         <div class="home__logo">
             <img src="images/png/memes hub icon.png" alt="web logo">
             <p>Taste Like Never Before</p>
             <div class="btn__group">
-                <a href="#"><button class="btn btn__large btn__warning">book a table</button></a>
-                <a href="#"><button class="btn btn__large btn__outline">takeaway</button></a>
+                <button class="btn btn__large btn__warning">book a table</button>
+                <button class="btn btn__large btn__outline">takeaway</button>
             </div>
         </div>
     </section>
@@ -59,7 +57,9 @@
                 </p>
             </div>
             <div class="service__card">
-                <i class="fa-solid fa-truck fas"></i>
+                <div class="food__truck-div">
+                    <i class="fa-solid fa-truck fas food__truck"></i>
+                </div>
                 <h1 class="primary__heading">Online Order</h1>
                 <p class="primary__paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Vel ut beatae architecto illum quod distinctio.
