red-chilli added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#">Beverages</a></li>
             <li><a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a></li>
             <li><a href="#">Menu</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section class="sec_pad about__section">
+    <section class="sec_pad about__section" id="about">
         <div class="about__section-part">
             <div class="about__images">
                 <div class="about__image-container">
@@ -94,6 +94,7 @@
                 </div>
             </div>
             <div class="about__content">
+                <img src="images/jpg/red-chili-pepper.jpg" alt="">
                 <h1 class="section__heading">about</h1>
                 <h1 class="section__tagline">Welcome to Memes Hub</h1>
                 <p class="primary__paragraph">
