navbar styles changed for small devices

--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
 </head>
 <body>
     <header class="navbar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Food</a></li>
-            <li><a href="#">Beverages</a></li>
-            <li><a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#">Contact</a></li>
+        <img src="images/png/memes hub icon.png" class="header__logo small__device" alt="web logo">
+        <ul class="header__links">
+            <li><a class="header__link" href="#">Home</a></li>
+            <li><a class="header__link" href="#">Food</a></li>
+            <li><a class="header__link" href="#">Beverages</a></li>
+            <li class="header__logo-list"><a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a></li>
+            <li><a class="header__link" href="#">Menu</a></li>
+            <li><a class="header__link" href="#about">About</a></li>
+            <li><a class="header__link" href="#">Contact</a></li>
         </ul>
+        <div class="ham__menu">
+            <i class="fa-solid fa-bars fa-2xl ham__menu-bar"></i>
+        </div>
     </header>
     <section class="home__section">
         <div class="home__logo">
