--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <li><a class="header__link" href="#">Home</a></li>
             <li><a class="header__link" href="#">Food</a></li>
             <li><a class="header__link" href="#">Beverages</a></li>
-            <li class="header__logo-list"><a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a></li>
+            <li class="header__logo-list">
+                <a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a>
+            </li>
             <li><a class="header__link" href="#">Menu</a></li>
             <li><a class="header__link" href="#about">About</a></li>
             <li><a class="header__link" href="#">Contact</a></li>
