image file size reduces for smooth web loading

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
     <header class="navbar">
-        <img src="images/png/memes hub icon.png" class="header__logo small__device" alt="web logo">
+        <div>
+            <a href="#"><img src="images/png/memes hub icon.png" class="header__logo small__device" alt="web logo"></a>
+        </div>
         <ul class="header__links">
             <li><a class="header__link" href="#">Home</a></li>
             <li><a class="header__link" href="#">Food</a></li>
@@ -100,7 +102,6 @@
                 </div>
             </div>
             <div class="about__content">
-                <img src="images/jpg/red-chili-pepper.jpg" alt="">
                 <h1 class="section__heading">about</h1>
                 <h1 class="section__tagline">Welcome to Memes Hub</h1>
                 <p class="primary__paragraph">
