food menu added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         </div>
         <ul class="header__links">
             <li><a class="header__link" href="#">Home</a></li>
-            <li><a class="header__link" href="#">Food</a></li>
-            <li><a class="header__link" href="#">Beverages</a></li>
+            <li><a class="header__link" href="#">Menu</a></li>
             <li class="header__logo-list">
                 <a href="#" class="header__logo-a"><img src="images/png/memes hub icon.png" class="header__logo" alt="web logo"></a>
             </li>
-            <li><a class="header__link" href="#">Menu</a></li>
             <li><a class="header__link" href="#about">About</a></li>
             <li><a class="header__link" href="#">Contact</a></li>
         </ul>
@@ -35,6 +33,7 @@
             <i class="fa-solid fa-bars fa-2xl ham__menu-bar"></i>
         </div>
     </header>
+
     <section class="home__section">
         <div class="home__logo">
             <img src="images/png/memes hub icon.png" alt="web logo">
@@ -112,11 +111,131 @@
                     perspiciatis dolore, maiores nam quod? Corrupti molestiae vitae ipsam, in aliquam 
                     officia maxime natus magni nihil nulla quasi beatae.
                 </p>
+                <button class="btn btn__large btn__warning">read more</button>
             </div>
         </div>
     </section>
 
+    <section class="sec_pad menu__section">
+        <h1 class="section__heading">food menu</h1>
+        <h1 class="section__tagline">Most Popular Items</h1>
+        <div class="menu__bar">
+            <div class="menu__special" id="menuSpecial1">
+                <i class="fa-solid fa-mug-hot fas"></i>
+                <div>
+                    <p class="menu__para">Popular</p>
+                    <p class="menu__para-bold">Breakfast</p>
+                </div>
+            </div>
+            <div class="menu__special" id="menuSpecial2">
+                <i class="fa-solid fa-bowl-rice fas"></i>
+                <div>
+                    <p class="menu__para">Special</p>
+                    <p class="menu__para-bold">Lunch</p>
+                </div>
+            </div>
+            <div class="menu__special" id="menuSpecial3">
+                <svg width="35" height="35" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6 42L42 42" stroke="#000" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M6 36L42 36" stroke="#000" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M9 25C9 16.7157 15.7157 10 24 10C32.2843 10 39 16.7157 39 25V36H9L9 25Z" fill="#000" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M17 25V29" stroke="#f9c004" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M28 10V8C28 5.79086 26.2091 4 24 4V4C21.7909 4 20 5.79086 20 8V10" stroke="#000" stroke-width="4"/>
+                </svg>
+                <div>
+                    <p class="menu__para">Lovely</p>
+                    <p class="menu__para-bold">Dinner</p>
+                </div>
+            </div>
+        </div>
+        <section class="menu__bar-section-1">
+            <div class="food__item-part">
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
 
+            <div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="food__item">
+                    <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
+                    <div class="food__item-content">
+                        <div class="food__item-price">
+                            <p class="menu__para-bold">Spicy Biryani</p>
+                            <p class="menu__para-bold">₹220</p>
+                        </div>
+                        <p class="menu__para">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
 
     <script src="memes.js"></script>
     <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d950.3245578541753!2d83.20054456956022!3d17.68336627669094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3969f9f92763c7%3A0xe00c528d45a10411!2sMemes%20Hub%20Restaurant!5e0!3m2!1sen!2sin!4v1690983117532!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
