menu section arrow added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             </div>
         </div>
         <section class="menu__bar-section-1">
+            <span class="arrow"></span>
             <div class="food__item-part">
                 <div class="food__item">
                     <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
