--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="menu__special" id="menuSpecial3">
-                <svg width="35" height="35" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="34" height="34" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6 42L42 42" stroke="#000" stroke-width="4" stroke-linecap="round"/>
                     <path d="M6 36L42 36" stroke="#000" stroke-width="4" stroke-linecap="round"/>
                     <path d="M9 25C9 16.7157 15.7157 10 24 10C32.2843 10 39 16.7157 39 25V36H9L9 25Z" fill="#000" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
@@ -147,9 +147,9 @@
                     <p class="menu__para-bold">Dinner</p>
                 </div>
             </div>
+            <span class="arrow arrow_1"></span>
         </div>
         <section class="menu__bar-section-1">
-            <span class="arrow"></span>
             <div class="food__item-part">
                 <div class="food__item">
                     <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
