website looks changes respctive to the mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a class="header__link" href="#">Contact</a></li>
         </ul>
         <div class="ham__menu">
-            <i class="fa-solid fa-bars fa-2xl ham__menu-bar"></i>
+            <i class="fa-solid fa-bars ham__menu-bar"></i>
         </div>
     </header>
 
