font size changed

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="food__item-part2">
                 <div class="food__item">
                     <img src="images/jpg/food-item-biryani.jpg" class="food__item-img" alt="">
                     <div class="food__item-content">
